created service interfaces. Closes #5

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,7 @@ build/
 
 ### VS Code ###
 .vscode/
+/pom.xml.releaseBackup
+/release.properties
+/pet-clinic-data/pom.xml.releaseBackup
+/pet-clinic-web/pom.xml.releaseBackup
